<resources>
    <string name="app_name">Pedometer</string>
	<!--Scott-->
    <string name="main_label">Pedometer</string>
    <string name="action_goal">Goal options</string>
    <string name="button_go">GO</string>
    <string name="button_stop">STOP</string>
    <string name="button_reset">RESET</string>
    <string name="button_new_goal">NEW GOAL</string>
    <string name="button_more">MORE</string>
    <string name="text_view_time_started">Time Started: --:-- -- --/--/----</string>
    <string name="text_view_time_started_sample">Time Started: 04:03 PM 11/04/2016</string>
    <string name="text_view_steps">6,472</string>
    <string name="text_view_steps_current">6,472</string>
    <string name="text_view_steps_goal">10,000</string>
    <string name="title_stat">Statistics</string>
    <string name="title_goals">Goals</string>
	<!--Melissa-->
    <string name="cancel">Cancel</string>
    <string name="distance">Distance</string>
    <string name="distance_hint">Enter Distance Goal</string>
    <string name="step_hint">Enter Step Goal (Steps)</string>
    <string name="time_hint">Enter Time Goal (HH:MM)</string>
    <string name="button_goal_set">Set</string>
    <string name="steps">Steps</string>
    <string name="time">Time</string>
    <string-array name="units_array">
        <item>Miles</item>
        <item>Meters</item>
        <item>Yards</item>
        <item>KM</item>
        <item>Feet</item>
    </string-array>
</resources>
