<?xml version="1.0" encoding="utf-8"?>
<!--Assignment 4 Team Members: Melissa Dagley and Scott Fontenarosa-->
<!--Written By Melissa Dagley-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/activity_details_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             tools:context="edu.utdallas.pedometer.GoalActivity"
             android:orientation="horizontal"
             android:weightSum="1"
             android:descendantFocusability="beforeDescendants"
             android:focusableInTouchMode="true" >

    <TableRow>
        <CheckBox
            android:id="@+id/step_checkbox"
            />
        <TextView
            android:text="@string/steps"
            android:layout_weight="0"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/steps_value"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@id/steps_value"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/step_hint"
            android:inputType="number" />
    </TableRow>

    <TableRow>
        <CheckBox
            android:id="@+id/time_checkbox"
            />
        <TextView
            android:text="@string/time"
            android:layout_weight="0"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/time_value"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@id/time_value"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/time_hint"
            android:inputType="time"
            android:maxLength="5" />
    </TableRow>

    <TableRow>
        <CheckBox
            android:id="@+id/distance_checkbox"
            />
        <TextView
            android:text="@string/distance"
            android:layout_weight="0"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/distance"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@id/distance"
            android:inputType="number|numberDecimal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/distance_hint"/>
        <Spinner
            android:id="@+id/units_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </TableRow>


    <TableRow>

        <Button
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="4dp"
            android:background="#c21a5c"
            android:onClick="cancelGoal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_column="2"
            />



        <Button
            android:text="@string/button_goal_set"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="0dp"
            android:background="#398f3d"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:onClick="setGoal"
            android:layout_column="2"/>

        </TableRow>
    <TableRow>
        <TextView
            android:text="Suggested Goals"
            android:layout_span="4"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            />
    </TableRow>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/suggested_goal_list"
            android:layout_marginTop="9dp" />






</TableLayout>